# hiraise-solana

./: Anchor.toml
app/: package.json
app/src/@types/: create-campaign.interfaces.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/app/: layout.tsx
app/src/app/app/create/: createCampaignFom.tsx  page.tsx
app/src/app/app/past-campaigns/: page.tsx
app/src/components/common/: appNavMenu.tsx
app/src/components/icons/: common.tsx  logo.tsx
app/src/components/wallet/: SolanaWalletProvider.tsx  walletConnectButton.tsx
app/src/data/: create-campaign.data.ts
app/src/lib/: schemas.ts
programs/hiraise/: Cargo.toml
programs/hiraise/src/: errors.rs  lib.rs
programs/hiraise/src/instructions/: mod.rs
programs/hiraise/src/instructions/campaign/: campaign_create.rs  campaign_donate.rs  campaign_end.rs  mod.rs
programs/hiraise/src/instructions/campaign_coordinator/: initialize_coordinator.rs  mod.rs
programs/hiraise/src/states/: creator.rs  mod.rs  user.rs
programs/hiraise/src/states/campaign/: campaign.rs
programs/hiraise/src/states/campaign_cordinator/: campaign_coordinator.rs  mod.rs
programs/hiraise/tests/: hiraise.rs
programs/hiraise/tests/common/: mod.rs
tests/: hiraise.ts
