[package]
name = "hiraise"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hiraise"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-bpf = []

[dependencies]
anchor-lang = "0.30.1"
num-traits = "0.2"
num-derive = "0.4"
# solana-program = "2.0.7"

[dev-dependencies]
# solana-logger = "2.0.7"
solana-program-test = "1.18.22"
solana-sdk = "1.18.22"
# solana-test-validator = "2.0.7"
